# ffs

./: .gitignore  CMakeLists.txt  README.md  build.ninja  rules.ninja
CMake/: FindFSWATCH.cmake  FindFUSE.cmake
debian/: control
img/: CMakeLists.txt  activity.cpp  activity.h  direc_discovery.cpp  direc_discovery.h  event_sync.cpp  event_sync.h  evt.cpp  imadb.cpp  imadb.h  libimglib.dylib  types.h
src/: CMakeLists.txt  FFS  fs.cpp  load_file.cpp  load_file.h
